Correcting the css property for center-align

--- a/css/base.css
+++ b/css/base.css
@@ -100,7 +100,7 @@ p, li {
 .center-align {
   text-align: center;
   align-items: center;
-  justify-self: center;
+  justify-content: center;
 }
 /* Classes */
 
